--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  background-color: #f3f3f3;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flexbox{
   display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.flexbox .board{
+  display: flex;
+  z-index: 1;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  min-height: 100vh;
+  max-width: 500px;
+  background-color: #313131;
+  margin-top: 100px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.flexbox .board .card{
+  padding: 15px 25px;
+  background-color: #f3f3f3;
+  cursor: pointer;
+  margin: 15px;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#saved-tweets-header{
+    margin-top: -58px;
+    position: absolute;
+    text-align: center;
 }
